@@ -69,7 +69,6 @@
                 <H3>WHERE DO YOU WANT TO PUT THE NEW ITEM?</H3>
                 <div class="step-content">
                     <label class="formQuestion" for="tree">
-                        Destination
                         <input name="SearchableTextDestination"
                                id="search-destination"
                                type="text"
@@ -83,11 +82,11 @@
                                class="searchField" />
                         <ul id="wizard-destination-search-result">
                         </ul>
+                        <input type="button" name="send-wizard" id="send-wizard" value="OK"/>
                         <span class="required" title="Required">&nbsp;</span>
                         <span class="formHelp" id="destination_help"></span>
                     </label>
                     <div id="tree" name="tree"></div>
-                    <input type="button" name="send-wizard" id="send-wizard" value="OK"/>
                     <input type="hidden" name="selected_destination" value=""/>
                     <label class="destination-label" for="destination">Selected Container:</label>
                     <span class="selectedContainer"></span>
