@@ -5,6 +5,8 @@ from AccessControl import getSecurityManager
 
 from zope.component import getMultiAdapter
 
+from Products import AdvancedQuery
+from Products.AdvancedQuery import MatchGlob, Eq, In
 from Products.Five.browser import BrowserView
 from Products.CMFPlone.utils import safe_unicode
 from Products.CMFCore import permissions
@@ -23,44 +25,25 @@ class GetTreeJson(BrowserView):
        to be used by jquery.dynatree library.'''
     CONTENT_SEARCH_HTML = ViewPageTemplateFile('templates/content_search.pt')
 
-    def getSearchDestinationList(self):
+    def getSearchDestinationList(self, type_=None):
         """ Return list of destinatons """
-        #if type_ is None:
-        #    type_ = self.request.get('type_', None)
-
         catalog = getToolByName(self.context, 'portal_catalog')
 
-        container_path = ''
-        #if uid is not None:
-        #    container = catalog(UID=uid)
-        #    if len(container) == 1:
-        #        container = container[0]
-        #        container_path = container.getPath()
-
-        #if not container_path:
-        """portal = api.portal.get()
+        portal = api.portal.get()
         container_path = '/'.join(portal.getPhysicalPath())
 
-        query = {#'portal_type': self._get_container_types(),
-                 #'path': {'query': container_path},
-                 'SearchableText': self.request.get('SearchableText', '')}
+        query = (MatchGlob('Title',
+                    self.request.get('SearchableText', '') + '*') | \
+                MatchGlob('Description', 
+                    self.request.get('SearchableText', '') + '*')) & \
+                Eq('path', container_path) & \
+                In('portal_type', self._get_container_types())
 
-        print "Query: ", query
+        obj = lambda o: o if ISiteRoot.providedBy(o) else o.getObject()
 
-        results = IContentListing(catalog.searchResults(query))
-        print "RESULT1:\n", [x for x in results]
-        results = [self._info_from_content(x) for x in results]
-        results.sort(lambda x, y: cmp(x['title'], y['title']))
-        print "RESULT2:\n", results
-        return simplejson.dumps(results)"""
-
-        #return simplejson.dumps([])
-        search = Search(self.context, self.request)
-        query = dict(#SearchableText=self.request.get('SearchableText', ''),
-                     title=self.request.get('SearchableText', ''),
-                     portal_type=self._get_container_types())
-        results = [self._info_from_content(x, search_html=True)
-                    for x in search.results(query, batch=False)]
+        results = IContentListing(catalog.evalAdvancedQuery(query))
+        results = [self._info_from_content(x) for x in results
+                   if self._is_container_selectable(obj(x), type_)]
         results.sort(lambda x, y: cmp(x['title'], y['title']))
         return simplejson.dumps(results)
 
@@ -150,7 +133,6 @@ class GetTreeJson(BrowserView):
         #breadcrumbs_view = getMultiAdapter((content.getObject(), self.request),
         #                                   name='breadcrumbs_view')
         #breadcrumbs = breadcrumbs_view.breadcrumbs()
-        print "SearchableText: ", content.SearchableText()
         content_is_root = ISiteRoot.providedBy(content)
         if content_is_root:
             content_uid = '0'
@@ -195,7 +177,7 @@ class GetTreeJson(BrowserView):
         return result
 
     def _get_container_types(self):
-        return ['Folder', 'CastsContainer', 'Cast']
+        return ['Folder', 'CastsContainer']
 
     def _is_container_selectable(self, container, type_):
         writable = self._is_container_writable(container)
