@@ -51,6 +51,4 @@
   <javascript id="++resource++vnccollab.theme.js/jquery.datetimepicker.js"
               insert-before="++resource++vnccollab.theme.js/main.js"
               enabled="True" />
-  <javascript id="++resource++vnccollab.theme.js/jquery.datetimepicker.js"
-              enabled="True" />
 </object>
